tests/script/negative/adt/unknown_constr.s
type t { C }

@initial
run(t arg) {
  someInt = case(arg) {
    A -> 10;
    B -> 20;
  };
  terminate()
}
